--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,8 @@
     <h1>My Cart</h1>
   </header>
 
+  <% if !cart.blank? %>
+
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -49,5 +51,10 @@
       <% end %>
     </div>
   </div>
+
+  <% else %>
+    <p>Your cart is empty. Go buy some stuff.
+    <%= link_to "Home", :root, class: "btn btn-info" %>
+  <% end %>
 
 </section>
