--- a/app/views/user_mailer/confirmation.html.erb
+++ b/app/views/user_mailer/confirmation.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Hi, <%= @user %> </h1>
+    <h1>Hi, <%= @user.first_name %> </h1>
     <p>
       This is a email to confirm your order from Jungle. 
     </p>
