--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -77,6 +77,32 @@ main section.categories-show {
   }
 }
 
+#reviews{
+  margin-top: 20px;
+  margin-left: 20px;
+
+  #panel-heading{
+    padding-bottom: 3px;
+  }
+
+  #review_delete{
+    float: right;
+  }
+  .star, .star-o{
+    color: gold;
+  }
+}
+#create_review{
+  margin-top: 50px;
+
+  h4 {
+    margin-bottom: 20px;
+  }
+  select{
+    width: 100px;
+  }
+}
+
 main section.products-show {
 
   .product-detail {
@@ -85,5 +111,3 @@ main section.products-show {
     }
   }
 }
-
-
