--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -20,11 +20,9 @@
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
-    <%= link_to product do %>
-      <% if product.quantity == 0 %>
-        <aside class="soldout">
-          <p>SOLD OUT!<p>
-        </aside>
-      <% end %>
-    <% end %>
+  <% if product.quantity == 0 %>
+    <aside class="soldout">
+      <p> SOLD OUT! </p>
+    </aside>
+  <% end %>
 </article>
