--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,31 +1,95 @@
 <section class="products-show">
 
-  <header class="page-header">
-    <h1><%= link_to @product.category.name, @product.category %> &raquo; <%= @product.name %></h1>
-  </header>
+    <header class="page-header">
+      <h1><%= link_to @product.category.name, @product.category %> &raquo; <%= @product.name %></h1>
+    </header>
+  
+    <article class="product-detail">
+  
+      <div class="row">
+  
+        <div class="col-sm-4">
+          <%= image_tag @product.image.url, class: 'main-img' %>
+        </div>
+  
+        <div class="col-sm-8">
+          <dl class="dl-horizontal">
+            <dt>Name</dt>
+            <dd><%= @product.name %></dd>
+            <dt>Description</dt>
+            <dd><%= @product.description %></dd>
+            <dt>Quantity</dt>
+            <dd><%= @product.quantity %></dd>
+            <dt>Price</dt>
+            <dd><%= @product.price %></dd>
+          </dl>
+        </div>
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-7" id="create_review">
+          <h4> Create a review </h4>
+          <%= form_for [@product, Review.new] do |form| %>
+  
+              <% if form.object.errors.any? %>
+                <div class="alert alert-danger">
+                  <strong>The following errors prevented saving:</strong>
+                  <ul>
+                    <% form.object.errors.full_messages.each do |error| %>
+                      <li><%= error %></li>
+                    <% end %>
+                  </ul>
+                </div>
+              <% end %>
+  
+              <div class="form-group">
+                <%= form.label :description %>
+                <%= form.text_field :description, class: 'form-control review_description' %>
+              </div>
+  
+              <div class="form-group">
+                <%= form.label :rating %> <br>
+                <%= form.select :rating, options_for_select([['1', 1], ['2', 2], ['3', 3], ['4', 4], ['5', 5]]), class: 'form-control' %>
+                <%= form.hidden_field :product_id, :value => @product.id %>
+              </div>
+            <%= form.submit 'Create Review', class: 'btn btn-primary submit_review' %>
+          <% end %>
+        </div>
+  
+        <div class="col-sm-12" id="reviews">
+          <% if @product.reviews.length != 0 %>
+  
+            <h2>User Reviews</h2>
+            <div class="panel panel-default">
+  
+              <% @product.reviews.each do |review| %>
+  
+                <div class="panel-heading">
+                  <% review.rating.times do %>
+                    <%= fa_icon('star', class: 'star') %>
+                  <% end %>
+  
+                  <% (5 - review.rating).times do %>
+                    <%= fa_icon('star-o', class: 'star') %>
+                  <% end %>
 
-  <article class="product-detail">
-
-    <div class="row">
-
-      <div class="col-sm-4">
-        <%= image_tag @product.image.url, class: 'main-img' %>
+                  <% if user === review.user_id %>
+                    <%= link_to fa_icon('trash') %>
+                  <% end %>
+                </div>
+  
+                <div class="panel-body">
+                  <p> <%= review.description %> </p>
+                </div>
+              <% end %>
+            </div>
+  
+          <% else %>
+            <h4> No reviews yet! Be the first! </h4>
+          <% end %>
+        </div>
+  
       </div>
-
-      <div class="col-sm-8">
-        <dl class="dl-horizontal">
-          <dt>Name</dt>
-          <dd><%= @product.name %></dd>
-          <dt>Description</dt>
-          <dd><%= @product.description %></dd>
-          <dt>Quantity</dt>
-          <dd><%= @product.quantity %></dd>
-          <dt>Price</dt>
-          <dd><%= @product.price %></dd>
-        </dl>
-      </div>
-    </div>
-
-  </article>
-
-</section>
+  
+    </article>
+  
+  </section>
