--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,37 @@
-<h1 value="Sign in"/>
+<section class="new-user">
+
+  <header class="page-header">
+    <h1>New User</h1>
+  </header>
+
+  <div class="row">
+  <div class="col-sm-6 col-sm-offset-1">
   <%= form_for :user, url: '/users' do |form| %>
-    Fist Name: <%= form.text_field :first_name %>
-    Last Name: <%= form.text_field :last_name %>
-    Email: <%= form.text_field :email %>
-    Password: <%= form.number_field :password %>
-    Password Confirmation: <%= form.text_field :password_confirmation %>
-  <%= form.submit 'Submit' %>
-<% end %>
+
+      <div class="form-group">
+        <%= form.label :first_name %>
+        <%= form.text_field :first_name, class: 'form-control' %>
+      </div>
+      <div class="form-group">
+        <%= form.label :last_name %>
+        <%= form.text_field :last_name, class: 'form-control' %>
+      </div>
+      <div class="form-group">
+        <%= form.label :email %>
+        <%= form.text_field :email, class: 'form-control' %>
+      </div>
+      <div class="form-group">
+        <%= form.label :password %>
+        <%= form.password_field :password, class: 'form-control' %>
+      </div>
+      <div class="form-group">
+        <%= form.label :password_confirm %>
+        <%= form.password_field :password_confirmation, class: 'form-control' %>
+      </div>
+
+      <%= form.submit 'Create User', class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+
+</section>
